agregando archivos estaticos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
     <title>Itil</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    
-   
+
+
 
 
     <style type="text/css">
@@ -17,24 +17,24 @@
             font-family:Verdana, Geneva, sans-serif;
             font-size:12px;
         }
-        
+
         .espacio10 {
             height:10px;
             clear:both;
         }
-        
+
         .inicio {
             width:700px;
             height:100%;
             padding:0px;
             margin:0px auto 0px auto;
         }
-        
+
         .ejemplos {
             float:left;
             width:100%;
         }
-        
+
         .ejemplos img {
             float:left;
             border:1px solid #999;
@@ -43,8 +43,8 @@
         */
     </style>
 
-    <script type="text/javascript"> 
-    
+    <script type="text/javascript">
+
         $(document).ready(function(){
             $('.fancybox').fancybox();
             $(".ejemplo_1").fancybox({
@@ -74,7 +74,7 @@
                 'type'				: 'iframe'
             });
         });
-        
+
     </script>
 </head>
 <body>
@@ -104,7 +104,7 @@
                             <a class="nav-link" href="#promocion" >Promoción</a>
                         </li>
                     </ul>
-                   
+
                   </div>
                 </nav>
         </header>
@@ -158,10 +158,10 @@
                                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
                             </div>
                         </div>
-                    </div>   
+                    </div>
                 </div-->
-                
-                
+
+
                 <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
@@ -171,47 +171,47 @@
                     <span class="sr-only" >Next</span>
                 </a>
             </div>
-            
+
             <div class="container marketing" >
-    
+
                 <div class="row featurette"  id="sect2" style="padding-top: 80px;"  >
                             <!-- Three columns of text below the carousel -->
                             <h2 class="featurette-heading1" style="margin-bottom: 30px;" >Testimonios <span class="text-muted">Itil Foundation</span></h2>
-                            
-                             
+
+
                     <div class="row">
-                            
+
                             <div class="col-lg-4">
-                                <img class="rounded-circle" src="image/candidatos/candidato2.jpeg" alt="Generic placeholder image" width="140" height="140">
+                                <img class="rounded-circle" src="img/candidatos/candidato2.jpeg" alt="Generic placeholder image" width="140" height="140">
                                 <h2>Jenny Collazos</h2>
                                 <h3>IT Specialist</h3>
                                 <p>La revisión de cada fase y concepto de ITIL fue bastante amena, mejorando el aprendizaje. Logre mi certificación y consolidación de conocimientos en corto tiempo.</p>
                                 <p class="empresa">IBM Perú</p>
-                                <p><a class="btn btn-secondary fancybox" href="image/cert02-JC.jpg" role="button">Ver certificado &raquo;</a></p>
+                                <p><a class="btn btn-secondary fancybox" href="img/cert02-JC.jpg" role="button">Ver certificado &raquo;</a></p>
                             </div><!-- /.col-lg-4 -->
-                            
+
                             <div class="col-lg-4"><!--col-xs col-sm col-md col-lg #12 es el largo -->
-                                <img class="rounded-circle" src="image/candidatos/candidato4.jpeg" width="140" height="140">
+                                <img class="rounded-circle" src="img/candidatos/candidato4.jpeg" width="140" height="140">
                                 <h2>Christian Huayaney</h2>
                                 <h3> Especialista de Service Desk </h3>
                                 <p>La preparación fue muy buena gracias a la experiencia laboral del profesor y la forma clara y sencilla de explicar los temas. Ademas, el material brindado ayudo mucho. </p>
                                 <p class="empresa">GMD Advent International</p>
-                                
-                                <p><a class="btn btn-secondary fancybox" href="image/cert01-CH.jpg" role="button">Ver certificado &raquo;</a></p>
+
+                                <p><a class="btn btn-secondary fancybox" href="img/cert01-CH.jpg" role="button">Ver certificado &raquo;</a></p>
 
                             </div><!-- /.col-lg-4 -->
-                            
-                            
+
+
                             <div class="col-lg-4">
-                                <img class="rounded-circle" src="image/candidatos/candidato3.jpeg" alt="Generic placeholder image" width="140" height="140">
+                                <img class="rounded-circle" src="img/candidatos/candidato3.jpeg" alt="Generic placeholder image" width="140" height="140">
                                 <h2>David Aldazabal</h2>
                                 <h3>IT Specialist</h3>
                                 <p>Las clases fueron dinámicas y cada uno de los simulacros ayudarón a confirmar lo repasado y revisar aquello que debia de reforzar. Llevar este entrenamiento fue factor clave.</p>
                                 <p class="empresa">IBM Perú</p>
-                                <p><a class="btn btn-secondary fancybox" href="image/cert03-DA.jpg" role="button">Ver certificado &raquo;</a></p>
+                                <p><a class="btn btn-secondary fancybox" href="img/cert03-DA.jpg" role="button">Ver certificado &raquo;</a></p>
                             </div><!-- /.col-lg-4 -->
                     </div>
-    
+
                 </div><!-- /.row fin sect2 -->
                 <hr class="featurette-divider">
                 <div class="row featurette"  style="padding-top:10px" id="sect3" >
@@ -232,12 +232,12 @@
                                     <p class="parrafo">Alumnos certificados</p>
                                 </div>
                         </div>
-                
+
                     </div>
-            
+
                 </div> <!--fin sect3-->
-                
-        
+
+
                 <!--div class="row "   >
                         <div class="col-md-7 order-md-2">
                           <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
@@ -255,65 +255,65 @@
                           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                         </div-->
 
-                          <!--1er add------------------------ -->  
-                        
+                          <!--1er add------------------------ -->
+
                         <div class="servicios col-md-5  rounded border  " onclick="curso1()" onmouseover="pintar(this)" onmouseout="despintar(this)" style="border: 2px">
                             <img class="featurette-image img-fluid mx-auto rounded-top " data-srcz="holder.js/500x250/auto" src="image/servicio1.jpeg" alt="Generic placeholder image"  style="height: 280px">
-                            
+
                             <div style="padding: 10px">
-                                <div class="text-muted h4" > 
+                                <div class="text-muted h4" >
                                     ITIL Foundation - Curso de entrenamiento
-                                </div>      
+                                </div>
                                <div class="h6">Duracion aprox de 24 horas (coffe-break) Nivel inicial
-                                </div>                           
+                                </div>
                                 <p>Funadmentos de Mejores buenas practicas de manera intuitiva y práctica</p>
-                                
+
                                 <div class='course-listing-extra-info'>
                                     <div class='pull-sm-left' >
                                         <!-- Bundle Info (everyone) -->
-                                        
+
                                         <!-- Author Image and Name (everyone) -->
                                         <img align='left' class='rounded-circle' src='https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:30,height:30/https://www.filepicker.io/api/file/AIDYcbYRze3tVGqFFcEs' alt="Juan Vidal Gil">
                                         <div class='small pull-sm-left'>
                                             <a>Juan Vidal Gil</a>
-                                    
+
                                         </div>
                                         <div class='float-right' align='right'>
                                                 <div class='small course-price'>
                                                 <h5>S/95</h5>
                                                 </div>
                                         </div>
-                                        
+
                                     </div>
                                             <!-- Price (unenrolled users) -->
                                 </div>
-                            </div>   
+                            </div>
                         </div>
-                        
+
                         <!--2do add-->
                         <div class="servicios col-md-5  rounded border  " onclick="curso1()" onmouseover="pintar(this)" onmouseout="despintar(this)">
                                 <img class="featurette-image img-fluid mx-auto rounded-top " data-srcz="holder.js/500x250/auto" src="image/servicio20.jpeg" alt="Generic placeholder image">
-                            <div style="padding: 10px">    
-                                
-                                <div class="text-muted h4"> 
+                            <div style="padding: 10px">
+
+                                <div class="text-muted h4">
                                     ITIL Foundation - Simulador
-                                </div>         
+                                </div>
                                 <div class="h6">Duracion aprox de 24 horas (coffe-break) Nivel inicial
-                                </div>                           
+                                </div>
                                 <p>Funadmentos de Mejores buenas practicas de manera intuitiva y práctica</p>
-                                 
+
                                 <div class='course-listing-extra-info'>
                                     <div class='pull-sm-left' >
                                         <!-- Bundle Info (everyone) -->
-                                        
+
                                         <!-- Author Image and Name (everyone) -->
                                         <img align='left' class='rounded-circle' src='https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:30,height:30/https://www.filepicker.io/api/file/AIDYcbYRze3tVGqFFcEs' alt="Juan Vidal Gil">
                                         <div class='small course-author-name'>
                                             <a>Juan Vidal Gil</a>
-                                    
+
                                         </div>
-                                        
-                                        
+
+
                                     </div>
                                                          <!-- Price (unenrolled users) -->
                                     <div class='float-right' align='right'>
@@ -321,56 +321,56 @@
                                         <h5>S/95</h5>
                                         </div>
                                     </div>
-                                </div>   
+                                </div>
 
                             </div>
-                           
+
                         </div>
-                      
+
 
                 </div>
                       <hr class="featurette-divider">
                     <div class="row featurette d-flex justify-content-center"  style="padding-bottom:280px" id="promocion" >
                         <h2 class="featurette-heading" >Promocion <span class="text-muted">Itil Foundation</span></h2>
-                                
+
                             <div class="curricula col-md-9  rounded border  " >
                                     <h2> Donec sed odio dui. Etiam porta sem malesuada m</h2>
                                     <h1>25%</h1>
                             </div>
-                              
+
                     </div>
-                  
+
 
             </div>
         </main>
             <!-- Bootstrap core JavaScript
     ================================================== -->
-    
+
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    
+
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="https://getbootstrap.com/assets/js/vendor/popper.min.js"></script>
     <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="https://getbootstrap.com/assets/js/vendor/holder.min.js"></script>        
+    <script src="https://getbootstrap.com/assets/js/vendor/holder.min.js"></script>
 
     <!--fancy-->
     <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
     <!-- Add fancyBox main JS and CSS files -->
     <script type="text/javascript" src="jquery.fancybox.js"></script>
     <link rel="stylesheet" type="text/css" href="jquery.fancybox.css" media="screen" />
-    
+
     <script>
             $(document).ready(function(){
-    
+
                 $('.fancybox').fancybox();
             })
-           
-     
+
+
     </script>
-   
-   <script src="script.js"></script>      
+
+   <script src="script.js"></script>
 
 </body>
 </html>
