agregando archivos estaticos 2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Itil</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 
 
@@ -118,7 +118,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="first-slide" src="image/itil2.jpg" alt="Itil">
+                        <img class="first-slide" src="img/sliders/img1.jpg" alt="Itil">
                         <div class="container">
                             <div class="carousel-caption">
                                 <h1>¿Sabías que cada vez mas empresas solicitan la certificación Itil Foundation?</h1>
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="second-slide" src="image/image.jpg" alt="Itil">
+                        <img class="second-slide" src="img/sliders/img2.jpg" alt="Itil">
                         <div class="container">
                             <div class="carousel-caption">
                                 <h1>¡Preparate para ascender!</h1>
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="third-slide" src="image/imagen2.jpg" alt="Itil">
+                        <img class="third-slide" src="img/sliders/img3.jpg" alt="Itil">
                         <div class="container">
                             <div class="carousel-caption">
                                 <h1>Decisión</h1>
@@ -258,7 +258,7 @@
                           <!--1er add------------------------ -->
 
                         <div class="servicios col-md-5  rounded border  " onclick="curso1()" onmouseover="pintar(this)" onmouseout="despintar(this)" style="border: 2px">
-                            <img class="featurette-image img-fluid mx-auto rounded-top " data-srcz="holder.js/500x250/auto" src="image/servicio1.jpeg" alt="Generic placeholder image"  style="height: 280px">
+                            <img class="featurette-image img-fluid mx-auto rounded-top " data-srcz="holder.js/500x250/auto" src="img/services/servicio1.jpeg" alt="Generic placeholder image"  style="height: 280px">
 
                             <div style="padding: 10px">
                                 <div class="text-muted h4" >
@@ -292,7 +292,7 @@
 
                         <!--2do add-->
                         <div class="servicios col-md-5  rounded border  " onclick="curso1()" onmouseover="pintar(this)" onmouseout="despintar(this)">
-                                <img class="featurette-image img-fluid mx-auto rounded-top " data-srcz="holder.js/500x250/auto" src="image/servicio20.jpeg" alt="Generic placeholder image">
+                                <img class="featurette-image img-fluid mx-auto rounded-top " data-srcz="holder.js/500x250/auto" src="img/services/servicio2.jpeg" alt="Generic placeholder image">
                             <div style="padding: 10px">
 
                                 <div class="text-muted h4">
@@ -356,10 +356,10 @@
     <script src="https://getbootstrap.com/assets/js/vendor/holder.min.js"></script>
 
     <!--fancy-->
-    <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
     <!-- Add fancyBox main JS and CSS files -->
-    <script type="text/javascript" src="jquery.fancybox.js"></script>
-    <link rel="stylesheet" type="text/css" href="jquery.fancybox.css" media="screen" />
+    <script type="text/javascript" src="js/jquery.fancybox.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css" media="screen" />
 
     <script>
             $(document).ready(function(){
@@ -369,8 +369,19 @@
 
 
     </script>
+    <script src="/js/script.js"></script>
+    
+    <!--script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
 
-   <script src="script.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-1.12.4.js"
+    integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
+    crossorigin="anonymous"></script-->
+
+    
 
 </body>
 </html>
